--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,3 +1,4 @@
+{% include 'sidebar.html' %}
 {% load static %}
 
 
@@ -10,19 +11,23 @@
     <title>Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    {% block styles %}
+    {% endblock styles %}
+    <style>
+        
+    </style>   
 </head>
 <body>
+    
 
-<main>
-
-        {% block content %}
-
-        {% endblock content %}
-
-
-</main>
-
+    {%block sidebar%}
+    {%endblock sidebar%}
+    <div class="col py-3">
+     {%block content%}
+     {%endblock content%}
+    </div>
+    </div>
+    </div>
 
 </body>
 </html>
