--- a/src/management_system/templates/management_system/add_new_employee.html
+++ b/src/management_system/templates/management_system/add_new_employee.html
@@ -7,5 +7,15 @@
 
   Dodaj nowego ziomka
 
+<form method="POST" enctype="multipart/form-data">
+ 
+    <!-- Security token -->
+    {% csrf_token %}
+ 
+    <!-- Using the formset -->
+    {{ form.as_p }}
+     
+    <input type="submit" value="Submit">
+</form>
 
 {% endblock content %}
