--- a/src/management_system/templates/management_system/add_new_employee.html
+++ b/src/management_system/templates/management_system/add_new_employee.html
@@ -1,11 +1,10 @@
 {% extends 'main.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 
 
-  Dodaj nowego ziomka
 
 <form method="POST" enctype="multipart/form-data">
  
@@ -13,9 +12,9 @@
     {% csrf_token %}
  
     <!-- Using the formset -->
-    {{ form.as_p }}
+    {{ form|crispy }}
      
-    <input type="submit" value="Submit">
+    <button type="submit" class="btn btn-primary mt-3">Zapisz</button>
 </form>
 
 {% endblock content %}
