--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -6,9 +6,8 @@
         {% for item in itemList %}
 
         {{item.item_name}}
-        {{item.item_it}}
-        {{item.item_sn}}
+        {{item.item_it|default_if_none:""}}
+        {{item.item_sn|default_if_none:""}}
         <br>
-
         {%endfor%}  
 {% endblock content %}
