--- a/src/management_system/templates/management_system/protocols.html
+++ b/src/management_system/templates/management_system/protocols.html
@@ -5,7 +5,27 @@
 
 
 
-  Lista protokołow
+  <h2>Protokoły </h2>
+
+
+
+
+
+  <div class="card w-100" >
+    <ul class="list-group list-group-flush">
+
+      {% for protocol in protocolList %}
+        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 " href="{% url 'singleProtocol' protocol.id%}">
+        <li class="list-group-item">{{protocol.barcode}} | {{protocol.employee}} | {{protocol.created}} | {{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</li>
+        </a>
+      
+      
+      {%endfor%}  
+
+    </ul>
+  </div>
+  
+
 
 
 {% endblock content %}
