--- a/src/management_system/templates/management_system/employees.html
+++ b/src/management_system/templates/management_system/employees.html
@@ -3,12 +3,44 @@
 
 {% block content %}
 
-    {% for employee in employeeList%}
+    
 
-        {{employee.user_name}}
-        {{employee.user_surname}}
-        <br>
+        
+        
+        
+        
 
-    {%endfor%}   
+
+     
+
+    <div class="container text-center">
+        <div class="row">
+          <div class="col"><b>Imię: </b></div>
+          <div class="col"><b>Nazwisko: </b></div>
+          <div class="col"><b>Dział: </b></div>
+          <div class="col"><b>Lokalizacja: </b></div>
+          <div class="col"></div>
+          <div class="col-5"></div>
+
+        {% for employee in employeeList%}
+        <hr>
+            <div class="row mt-2">
+                <div class="col">{{employee.user_name}}</div>
+                <div class="col">{{employee.user_surname}}</div>
+                <div class="col">{{employee.user_department|default_if_none:""}}</div>
+                <div class="col">{{employee.user_location|default_if_none:""}}</div>
+                <div class="col"><a class="btn btn-primary" href="{% url 'singleEmployee' employee.id %}" role="button">Zobacz</a></div>
+                <div class="col-5"></div>
+                
+            </div>
+            
+        {%endfor%}  
+        <hr>
+    </div>
+
+
+
+
+
 
 {% endblock content %}
