--- a/src/management_system/templates/management_system/new_protocol_next_item.html
+++ b/src/management_system/templates/management_system/new_protocol_next_item.html
@@ -5,14 +5,13 @@
 
 
 
-  <h1>Nowy protokół</h1>
+  <h1>Kolejny przedmiot</h1>
   <form method="POST" enctype="multipart/form-data">
  
     <!-- Security token -->
     {% csrf_token %}
  
     <!-- Using the formset -->
-    {{ protocolForm|crispy }}
     {{ itemForm|crispy }}
      
     <button type="submit" class="btn btn-primary mt-3" name="saveAndEnd">Zapisz</button>
