protocols view in employee

--- a/src/management_system/templates/management_system/single_employee_items.html
+++ b/src/management_system/templates/management_system/single_employee_items.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-
+<a class="btn btn-dark" href="{% url 'singleEmployeeProtocols' employee.id %}" role="button">Protokoły</a>
 
 
 
