--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -7,8 +7,8 @@
 
         <b>Nazwa:</b>{{item.item_name}} <br>
         <b>IT:</b>{{item.item_it|default_if_none:""}}<br>
-        <b>S/N:</b>{{item.item_sn|default_if_none:""}}<br>
-        <a class="btn btn-primary" href="{% url 'singleItem' item.id %}" role="button">Zobacz</a>
+        <b>S/N:</b>{{item.item_sn|default_if_none:""}}<br><br>
+        <a class="btn btn-primary" href="{% url 'singleItem' item.id %}" role="button">Wyświetl</a>
         <br>
         <hr>
         {%endfor%}  
