--- a/src/management_system/templates/management_system/single_item.html
+++ b/src/management_system/templates/management_system/single_item.html
@@ -7,8 +7,11 @@
         <b>IT: </b>{{item.item_it|default_if_none:""}}<br>
         <b>S/N: </b>{{item.item_sn|default_if_none:""}}<br>
         <b>Aktualny właściciel:</b>{{item.item_user|default_if_none:" brak"}}
-
-        <br>
+          <br>
+          {%if item.item_user.id%}
+          <a class="btn btn-primary" href="{%url 'singleEmployee' item.item_user.id%}"role="button">Wyświetl pracownika</a>
+            <br>
+          {%endif%}
         <br>
 
         <div class="card w-100" >
