--- a/src/management_system/templates/management_system/protocols.html
+++ b/src/management_system/templates/management_system/protocols.html
@@ -6,7 +6,9 @@
 
 
   <h2>Protokoły </h2>
-
+  <form action="{% url 'protocollist' %}" method="get">
+    <input name="q" type="text" placeholder="Search...">
+  </form>
 
 
 
