--- a/src/management_system/templates/management_system/single_employee_items.html
+++ b/src/management_system/templates/management_system/single_employee_items.html
@@ -39,6 +39,7 @@
             <input type="hidden" name="idList" id="idListInput">
             <button type="submit" class="btn btn-danger">Zdaj sprzęt</button>
           </form>
+          <a class="btn btn-primary" href="{% url 'newprotocol'  %}?eid={{employee.id}}" role="button">Dodaj sprzęt</a>
 
     </div>
     <script>
