--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -5,7 +5,8 @@
 <h2>Sprzęt</h2>
         <div class="container text-center mt-5">
                 <div class="row">
-                  <div class="col"><b>Nazwa sprzętu: </b></div>
+                  <div class="col"><b>Typ</b></div>
+                  <div class="col"><b>Model</b></div>
                   <div class="col"><b>IT: </b></div>
                   <div class="col-2"><b>SN: </b></div>
                   <div class="col"><b>KK: </b></div>
@@ -15,7 +16,8 @@
                 {% for item in itemList %}
                 <hr>
                     <div class="row mt-2">
-                        <div class="col">{{item.item_name}}</div>
+                        <div class="col">{{item.category}}</div>
+                        <div class="col">{{item.item_model}}</div>
                         <div class="col">{{item.item_it}}</div>
                         <div class="col-2">{{item.item_sn|default_if_none:""}}</div>
                         <div class="col">{{item.item_kk|default_if_none:""}}</div>
