--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -5,14 +5,18 @@
 
 
 
-  <h2>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}} dla {{protocol.employee}} z {{protocol.created}}</h2>
+  <h2>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}} dla {{protocol.employee}} z {{protocol.created|date:"d/m/Y"}}</h2>
 
   {% for item in items%}
-  <b>Nazwa:  </b>{{item.item_id.item_name}} <br>
+  <b>Typ:  </b>{{item.item_id.category}} <br>
+  <b>Producent:  </b>{{item.item_id.item_producent}} <br>
+  <b>Model:  </b>{{item.item_id.item_model}} <br>
   <b>S/N:  </b>{{item.item_id.item_sn|default_if_none:""}}<br>
   <b>IT:  </b>{{item.item_id.item_it|default_if_none:""}}<br>
   
   <br>
   {% endfor %}
-
+  <form action="{% url 'protocolRaportToPrint' %}" method="get">
+  <button class="btn btn-dark  me-5" role="button" type="submit" name='protocol' value='{{protocol.id}}'>Drukuj</button>
+</form>
 {% endblock content %}
