--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -3,6 +3,60 @@
 
 {% block content %}
 <h2>Sprzęt</h2>
+
+<table class="table mb-0">
+    <thead>
+      <tr>
+        <th scope="col">Typ</th>
+        <th scope="col">Model</th>
+        <th scope="col">IT</th>
+        <th scope="col">S/N</th>
+        <th scope="col">KK</th>
+        <th scope="col">Aktualny właściciel</th>
+      </tr>
+    </thead>
+    <tbody>
+
+        {% for item in itemList %}
+      <tr class="fw-normal">
+        <td>
+          <span>{{item.category}}</span>
+        </td>
+        <td class="align-middle">
+          <span>{{item.item_model}}</span>
+        </td>
+        <td class="align-middle">
+            <span>{{item.item_it}}</span>
+          </td>
+          <td class="align-middle">
+            <span>{{item.item_sn|default_if_none:""}}</span>
+          </td>
+          <td class="align-middle">
+            <span>{{item.item_kk|default_if_none:""}}</span>
+          </td>
+          <td class="align-middle">
+            <span>{{item.item_user|default_if_none:""}}</span>
+          </td>
+          
+        <td class="align-middle">
+            <a class="btn btn-success mb-1" href="{% url 'singleItem' item.id %}" role="button">Wyświetl</a>
+          {% comment %} <a href="#!" data-mdb-toggle="tooltip" title="Remove"><i
+              class="fas fa-trash-alt text-danger"></i></a> {% endcomment %}
+        </td>
+      </tr>
+
+      {%endfor%} 
+
+    </tbody>
+  </table>
+  <div class="card-footer text-end p-3">
+    <a class="btn btn-primary mb-1" href="{% url 'itemsAddNew' %}" role="button">Nowy przedmiot</a>
+  </div>
+  </div>    
+
+
+
+{% comment %} 
         <div class="container text-center mt-5">
                 <div class="row">
                   <div class="col"><b>Typ</b></div>
@@ -29,5 +83,5 @@
                 {%endfor%}  
                 <hr>
         
-            </div>
+            </div> {% endcomment %}
 {% endblock content %}
