--- a/src/management_system/templates/management_system/single_employee_protocols.html
+++ b/src/management_system/templates/management_system/single_employee_protocols.html
@@ -2,8 +2,29 @@
 
 
 {% block content %}
-<h2>Protokoły {{employee}}</h2>
-<a class="btn btn-dark float-end me-5" href="{% url 'singleEmployee' employee.id %}" role="button">Sprzęt</a>
+<nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <h3 class="text-white">{{employee}}</h3>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav ms-center mx-5 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="btn btn-outline-light me-2" href="{% url 'singleEmployee' employee.id %}" role="button">Sprzęt</a>
+          </li>
+        </ul>
+        <form class="d-flex ms-auto" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-info" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+
+
 
 
 
