--- a/src/raports/templates/raports/protocol_template.html
+++ b/src/raports/templates/raports/protocol_template.html
@@ -3,16 +3,35 @@
 
 
 <head>
-    <style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.3/JsBarcode.all.min.js"></script>
+  
+<style>
         p{
             font-size:10px;
         }
+        #barcode{
+            width:8.5em;
+            margin-top:-50px;
+        }
+
     </style>
 
 </head>
 <body>
-<p style="font-size: 15x; text-align: right;">{{protocol.created|date:"d/m/Y"}}</p>
-<p style="text-align: center; font-size:20px;"><strong>Protok&oacute;ł {{protocol.is_return|yesno:"Zwrotu ,Przekazania "}}sprzętu komputerowego</strong></p>
+
+    <table style="width: 100%; height: 72px;">
+        <tbody>
+        <tr>
+            <td><svg id="barcode"></svg></td>
+            <td><p style="font-size:20px;"><strong>Protok&oacute;ł {{protocol.is_return|yesno:"Zwrotu ,Przekazania "}}sprzętu komputerowego</strong></p></td>
+            <td><p style="font-size: 15x;text-align: right;">{{protocol.created|date:"d/m/Y"}}</p></td>
+
+        </tr>
+        </tbody>
+    </table>
+
+
+
 <p style="text-align: center;">rejestracja stacji roboczej</p>
 <p style="text-align: left;"><strong>I. Parametry techniczne sprzętu</strong></p>
 <table style="border-collapse: collapse; width: 100%; height: 72px;" border="1">
@@ -31,11 +50,11 @@
     {%for item in protocolItems %}
     <tr style="height: 18px;">
     <td style="width: 5.44511%; height: 18px;"></td>
-    <td style="width: 15.8144%; height: 18px;">{{item.item_id.category}}</td>
-    <td style="width: 18.7974%; height: 18px;">{{item.item_id.item_producent}}</td>
-    <td style="width: 19.2235%; height: 18px;">{{item.item_id.item_model}}</td>
-    <td style="width: 24.0531%; height: 18px;">{{item.item_id.item_sn}}</td>
-    <td style="width: 16.6667%; height: 18px;">{{item.item_id.item_it}}</td>
+    <td style="width: 15.8144%; height: 18px; font-family: Arial, Helvetica, sans-serif;text-align:center;">{{item.item_id.category}}</td>
+    <td style="width: 18.7974%; height: 18px;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{item.item_id.item_producent}}</td>
+    <td style="width: 19.2235%; height: 18px;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{item.item_id.item_model}}</td>
+    <td style="width: 24.0531%; height: 18px;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{item.item_id.item_sn}}</td>
+    <td style="width: 16.6667%; height: 18px;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{item.item_id.item_it}}</td>
     </tr>
     {%endfor%}
     </tbody>
@@ -61,12 +80,12 @@
 <td style="width: 16.6667%;">Czytelny podpis</td>
 </tr>
 <tr>
-<td style="width: 16.6667%;">{{protocol.created|date:"d.m.Y"}}</td>
-<td style="width: 16.6667%;">{{protocol.created_by.first_name}}</td>
-<td style="width: 16.6667%;">{{protocol.created_by.last_name}}</td>
-<td style="width: 12.7366%;">IO</td>
-<td style="width: 20.5968%;">Kraków</td>
-<td style="width: 16.6667%;">&nbsp;</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.created|date:"d.m.Y"}}</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.created_by.first_name}}</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.created_by.last_name}}</td>
+<td style="width: 12.7366%;font-family: Arial, Helvetica, sans-serif;text-align:center;">IO</td>
+<td style="width: 20.5968%;font-family: Arial, Helvetica, sans-serif;text-align:center;">Kraków</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">&nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -90,20 +109,22 @@
 <td style="width: 16.6667%;">Czytelny podpis</td>
 </tr>
 <tr>
-<td style="width: 16.6667%;">{{protocol.created|date:"d.m.Y"}}</td>
-<td style="width: 16.6667%;">{{protocol.employee.user_name}}</td>
-<td style="width: 16.6667%;">{{protocol.employee.user_surname}}</td>
-<td style="width: 12.7366%;">{{protocol.employee.user_department}}</td>
-<td style="width: 20.5968%;">{{protocol.employee.user_location}}</td>
-<td style="width: 16.6667%;">&nbsp;</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.created|date:"d.m.Y"}}</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.employee.user_name}}</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.employee.user_surname}}</td>
+<td style="width: 12.7366%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.employee.user_department}}</td>
+<td style="width: 20.5968%;font-family: Arial, Helvetica, sans-serif;text-align:center;">{{protocol.employee.user_location}}</td>
+<td style="width: 16.6667%;font-family: Arial, Helvetica, sans-serif;text-align:center;">&nbsp;</td>
 </tr>
 </tbody>
 </table>
 
 
 <script>
+    
     function printPage() {
       window.print();
+      JsBarcode("#barcode", {{protocol.barcode}});
     }
     
     window.onload = printPage;
