--- a/src/management_system/templates/management_system/employees.html
+++ b/src/management_system/templates/management_system/employees.html
@@ -16,7 +16,7 @@
         <th scope="col">Imię i nazwisko</th>
         <th scope="col">Dział</th>
         <th scope="col">Lokalizacja</th>
-        <th scope="col">Akcje</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
