--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -23,6 +23,8 @@
         <th scope="col">S/N</th>
         <th scope="col">KK</th>
         <th scope="col">Aktualny właściciel</th>
+        <th scope="col"></th>
+        
       </tr>
     </thead>
     <tbody>
