--- a/src/raports/templates/raports/protocol_template.html
+++ b/src/raports/templates/raports/protocol_template.html
@@ -23,7 +23,7 @@
         <tbody>
         <tr>
             <td><svg id="barcode"></svg></td>
-            <td><p style="font-size:20px;"><strong>Protok&oacute;ł {{protocol.is_return|yesno:"Zwrotu ,Przekazania "}}sprzętu komputerowego</strong></p></td>
+            <td><p style="font-size:20px;"><strong>Protok&oacute;ł {{protocol.is_return|yesno:"zwrotu ,przekazania "}}sprzętu komputerowego</strong></p></td>
             <td><p style="font-size: 15x;text-align: right;">{{protocol.created|date:"d/m/Y"}}</p></td>
 
         </tr>
