--- a/src/management_system/templates/management_system/single_employee_protocols.html
+++ b/src/management_system/templates/management_system/single_employee_protocols.html
@@ -2,9 +2,9 @@
 
 
 {% block content %}
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg" style="background-color:#DBD5D3;">
     <div class="container-fluid">
-      <h3 class="text-white">{{employee}}</h3>
+      <h3 class="text-black">{{employee}}</h3>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,7 +12,7 @@
         <ul class="navbar-nav ms-center mx-5 mb-lg-0">
 
           <li class="nav-item">
-            <a class="btn btn-outline-light me-2" href="{% url 'singleEmployee' employee.id %}" role="button">Sprzęt</a>
+            <a class="btn btn-light me-2" href="{% url 'singleEmployee' employee.id %}" role="button">Sprzęt</a>
           </li>
         </ul>
         <form class="d-flex ms-auto" role="search">
@@ -24,10 +24,54 @@
   </nav>
 
 
+  <table class="table mb-0">
+    <thead>
+      <tr>
+        <th scope="col">Data przekazania</th>
+        <th scope="col">Pracownik</th>
+        <th scope="col">Działanie</th>
+        <th scope="col">Sprzęt</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+
+      {% for protocol in protocols%}
+      {% for key, value in dataSet.items %}
+      {% if key == protocol.id %}
+      <tr class="fw-normal">
+        <td>
+          <span>{{protocol.created|date:"d/m/Y"}}</span>
+        </td>
+        <td class="align-middle">
+          <span>{{protocol.employee}}</span>
+        </td>
+        <td class="align-middle">
+            <span>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</span>
+          </td>
+          <td class="align-middle">
+            <span>                    
+              {% for item in value %}
+               {{item.item_id.item_it|default_if_none:""}} <b> -- </b> {{item.item_id.item_sn|default_if_none:""}} <br>
+              {% endfor%}</span>
+          </td>
+          <td class="align-middle">
+            <span><a class="btn btn-primary" href="{%url 'singleProtocol' protocol.id%}"role="button">Wyświetl</a></span>
+          </td>
+          
+        
+      </tr>
+
+      {% endif%}
+
+      {% endfor%}
+  {%endfor%}  
+
+    </tbody>
+  </table>  
 
 
-
-
+{% comment %} 
 
     <div class="container text-center mt-5">
         <div class="row">
@@ -39,11 +83,7 @@
           <div class="col"></div>
 
         {% for protocol in protocols%}
-
-
         {% for key, value in dataSet.items %}
-
-
         {% if key == protocol.id %}
 
         <hr>
@@ -67,7 +107,7 @@
         {%endfor%}  
         <hr>
 
-    </div>
+    </div> {% endcomment %}
 
 
 
